# Storeage-RPC

./: .gitignore  Cargo.toml  Makefile  README.md  aws-ubuntu-install.sh  ec2-setup.md
cmd/: Cargo.toml
cmd/src/: bins_back.rs  bins_client.rs  bins_keep.rs  bins_mkcfg.rs  bins_run.rs  client_cmds.rs  kv_client.rs  kv_server.rs  lib.rs  trib_front.rs
lab/: Cargo.toml  build.rs
lab/proto/: keeper.proto
lab/src/: lib.rs
lab/src/lab1/: client.rs  lab.rs  mod.rs  server.rs
lab/src/lab2/: lab.rs  mod.rs
lab/src/lab3/: mod.rs
lab/tests/: lab1_test.rs
tribbler/: Cargo.toml  build.rs
tribbler/proto/: rpc.proto
tribbler/src/: addr.rs  colon.rs  config.rs  err.rs  lib.rs  ref_impl.rs  rpc.rs  storage.rs  trib.rs
www/: index.html  makefile  package.json  style.css  trib.coffee  trib.js
